#
# Copyright (C) 2024 nota inc. All rights reserved.
# This source code is the property of nota inc. and is protected by copyright law. THE RECEIPT OR POSSESSION OF  THIS SOURCE CODE AND/OR RELATED INFORMATION DOES NOT CONVEY OR IMPLY TRANSFER OF OWNERSHIP, COPYRIGHT OR ANY RIGHTS INCLUDING BUT NOT LIMITED TO REPRODUCE, DISCLOSE OR DISTRIBUTE ITS CONTENTS, OR TO MANUFACTURE, USE, OR SELL ANYTHING THAT IT  MAY DESCRIBE, IN WHOLE OR IN PART.
# Unauthorized disclosure, reproduction, modification, distribution, or commercial use of all or any part of this source code without prior written consent from Nota Inc. is strictly prohibited.
# This source code is provided "as is" and without any warranty, express or implied.
# Nota Inc. shall not be liable for any damages arising from the use of this source code.
# For inquiries regarding the use of this source code, please contact Nota Inc. at:
# Email: contact@nota.ai
#
[package]
name = "test-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["gst-lib", "gst-process"]

[dependencies]
tonic = { version = "0.12.1", features = ["tls"] }
prost = "0.13.1"
prost-types = "0.13.1"
tonic-types = "0.12.1"
tonic-build = "0.12.1"
tokio = { version = "1.40.0", features = ["full", "macros"] }
log = "0.4.22"
flexi_logger = "0.29.1"
once_cell = "1.19.0"
uuid = { version = "1.11.0", features = ["v4"] }
regex = "1.11.0"
